# ClasesBootcamp-CodigoFacilito

./: README.md  readme.md  reto_busq_binaria.py
algoritmos/: binaria.py  busqueda_binaria.py  lineal.py  reto.py
estructuras/: colas.py  deque.py  pilas.py  tarea_recital.py
modulos/: readme.md  setup.py
modulos/modulos/: main.py
modulos/modulos/modulos_matematicos/: calculos_aritmeticos.py
modulos/modulos/modulos_matematicos/modulos_estadisticos/: calculos_desvios.py
modulos/undermath/: README.md  setup.py
modulos/undermath/docs/: modules.rst
modulos/undermath/docs/source/: conf.py  index.rst  undermath.modulos_aritmeticos.rst  undermath.modulos_estadisticos.rst  (+1 more)
modulos/undermath/undermath/: __init__.py  main.py
retos/clase03/package/: README.ES.md  README.md  pyproject.toml  run.cli.cmd  run.cmd  setup.py  testpep.cmd
retos/clase03/package/multi_maths/: __main__.py  __version__.py  cli.py  core.py  filters.py  info.py  multi_maths.py
retos/clase03/package/multi_maths/languages/: en.ini  es.ini
retos/clase03/package/multi_maths/mm_arithmetic/: mm_arithmetic.py
retos/clase03/package/multi_maths/mm_geometry/: mm_geometry.py
retos/clase03/package/multi_maths/mm_statistics/: mm_statistics.py
retos/clase03/package/multi_maths/tests/: test_arithmetic.py  test_core.py  test_filters.py  test_geometry.py  test_info.py  test_statistics.py
retos/clase03/package/release/: multi_maths-1.0.7-py3-none-any.whl
retos/clase05/busqueda_binaria/: README.md  app.py  testpep.cmd
retos/clase06/recital/: README.md  app.py  requirements.txt  testpep.cmd
(+20 files in other folders)
